# intent_classification

./: README.md  app.py  config.py  predict.py  pyproject.toml  utils.py
